# archivist

./: .gitignore  .gitmodules  Cargo.toml  Justfile  LICENSE.md  README.md  TODO.md  balance.md  creatures.md  items.md
data/: characters.json  credits.txt  help.txt  items.json  skills.json  starts.json  upgrades.json
examples/: creatures.rs
icon/: 16  32  64
src/: actor.rs  ai.rs  animation.rs  camera.rs  character.rs  damage.rs  data.rs  flow.rs  health.rs  items.rs  level.rs  lib.rs  main.rs  path.rs  player.rs  screen.rs  skills.rs  state.rs  targeting.rs  util.rs
src/campaign/: mission_ready.rs  mod.rs  select_equipment.rs  upgrade.rs
src/engine/: effects.rs  level.rs  mod.rs  time.rs
src/map/: builder.rs  mod.rs
src/map/builder/: cells.rs  drunk_digger.rs  mod.rs  rooms.rs  utils.rs
src/mission/: actor.rs  ai.rs  animation.rs  character.rs  damage.rs  data.rs  health.rs  items.rs  mod.rs  path.rs  player.rs  screen.rs  skills.rs  state.rs  targeting.rs  util.rs
src/mission/engine/: effects.rs  level.rs  mod.rs  status.rs  time.rs
src/mission/map/: mod.rs
src/mission/map/builder/: cells.rs  drunk_digger.rs  enemy_set.rs  mod.rs  rooms.rs  utils.rs
src/screens/: credits.rs  death.rs  help.rs  mod.rs  options.rs  title.rs  victory.rs
web/: index.html
