[package]
name = "archivist"
version = "0.1.0"
edition = "2024"

[dependencies]
macroquad = { version = "0.4", features = ["audio"] }
env_logger = "0.11.8"
log = "0.4.27"
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
pathfinding = "4.14.0"
adam_fov_rs = "0.4.0"
bresenham = "0.1.1"
directories = "6.0.0"

[profile.dev.package."*"]
opt-level = 3
