[package]
name = "archivist"
version = "0.1.0"
edition = "2024"

[features]
default = ["desktop"]
desktop = ["dep:directories"]

[dependencies]
macroquad = { version = "0.4", features = ["audio"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
pathfinding = "4.14.0"
adam_fov_rs = "0.4.0"
bresenham = "0.1.1"
directories = { version = "6.0.0", optional = true }


[profile.dev.package."*"]
opt-level = 3
